--- a/index.html
+++ b/index.html
@@ -205,47 +205,100 @@
                     src="../img/vendor/napoli.png"></a>
         </div>
 
-        <div class="vendor_pic_spot"><a href="http://www.86coldpress.com/" target="_blank"><img
-                    src="../img/vendor/86 Cold Press.png">
-            </a></div>
-        <div class="vendor_pic_spot"><a href="https://beautifuldaycafe.com/" target="_blank"><img
-                    src="../img/vendor/Beautiful Day.png">
-            </a></div>
-        <div class="vendor_pic_spot"><a href="https://www.dempseysburgerpub.com/" target="_blank"><img
-                    src="../img/vendor/dempsys.png">
-            </a></div>
-        <div class="vendor_pic_spot"><a href="https://www.felipeswichita.com/" target="_blank"><img
-                    src="../img/vendor/felipes.png">
-            </a></div>
+
+
+
+
+
         <!-- <div class="vendor_pic_spot"><img src="../img/vendor/Flying Stove.png"></a></div> -->
-        <div class="vendor_pic_spot"><a href="https://inspiritbrewing.com/" target="_blank"><img
-                    src="../img/vendor/inspiritbrewing.png"></a></div>
-        <div class="vendor_pic_spot"><a href="https://www.landsapothecary.com/home" target="_blank"><img
-                    src="../img/vendor/LeafStoneApothecary.png"></a></div>
+
+
         <div class="vendor_pic_spot"><a href="https://lesliecoffee.co/" target="_blank"><img
                     src="../img/vendor/leslie.png"></a></div>
-        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/Little Lion Cafe.png"></a></div>
+
+
         <div class="vendor_pic_spot"><a href="https://lolas-bistro.com/" target="_blank"><img
                     src="../img/vendor/lolasbistro.png"></a>
         </div>
 
-        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/noraskitchen.png"></a></div>
-        <div class="vendor_pic_spot"><a href="https://www.facebook.com/Orozcoshotsauce/" target="_blank"><img
-                    src="../img/vendor/orozcos.png"></a></div>
+
+
         <div class="vendor_pic_spot"><a href="http://www.piattoict.com/" target="_blank"><img
                     src="../img/vendor/Piatto.png"></a></div>
         <div class="vendor_pic_spot"><a href="https://www.placeholdercoffee.com/" target="_blank"><img
                     src="../img/vendor/placeholdercoffee.png"></a></div>
+
+
+        <div class="vendor_pic_spot"><a href="https://twooliveswichita.com/" target="_blank"><img
+                    src="../img/vendor/twoolives_logo.png"></a></div>
+
+        <div class="vendor_pic_spot"><a href="https://www.vorawichita.com/" target="_blank"><img
+                    src="../img/vendor/vora.png"></a></div>
+
+        <div class="vendor_pic_spot"><a href="https://www.peeweeandsweets.com/" target="_blank"><img
+                    src="../img/vendor/peewee.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="https://chesterschophouse.com/" target="_blank"><img
+                    src="../img/vendor/chesters.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="https://www.aviwichita.com/" target="_blank"><img
+                    src="../img/vendor/avi.png"></a></div>
+        <div class="vendor_pic_spot"><a href="https://www.facebook.com/urbanprairiebykgm/" target="_blank"><img
+                    src="../img/vendor/urban.png"></a></div>
+        <!-- ^^Tier1^^ vvTier2vv -->
+
+        <div class="vendor_pic_spot"><a href="#" target="_blank"><img src="../img/vendor/apollo.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.alberobistro.com/" target="_blank"><img
+                    src="../img/vendor/albero.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.thebelmontks.com/" target="_blank"><img
+                    src="../img/vendor/belmont.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.betteryetcoffee.com/" target="_blank"><img
+                    src="../img/vendor/betteryet.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.reverieroasters.com/" target="_blank"><img
+                    src="../img/vendor/reverie.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.tskwichita.com/" target="_blank"><img
+                    src="../img/vendor/tanyas.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="https://wichitaartmuseum.org/visit/things-to-do/cafe/"
+                target="_blank"><img src="../img/vendor/musecafe.png">
+            </a></div>
+
+
+
+        <div class="vendor_pic_spot"><a href="http://dempseysbiscuitco.com/" target="_blank"><img
+                    src="../img/vendor/crutch.png"></a></div>
+        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/noraskitchen.png"></a></div>
+        <!-- <div class="vendor_pic_spot"><a href="https://www.dempseysburgerpub.com/" target="_blank"><img
+                    src="../img/vendor/dempsys.png">
+            </a></div> -->
+        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/Little Lion Cafe.png"></a></div>
+        <!-- tier 3 -->
+        <div class="vendor_pic_spot"><a href="https://beautifuldaycafe.com/" target="_blank"><img
+                    src="../img/vendor/Beautiful Day.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="http://www.86coldpress.com/" target="_blank"><img
+                    src="../img/vendor/86 Cold Press.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="https://www.felipeswichita.com/" target="_blank"><img
+                    src="../img/vendor/felipes.png">
+            </a></div>
+        <div class="vendor_pic_spot"><a href="https://inspiritbrewing.com/" target="_blank"><img
+                    src="../img/vendor/inspiritbrewing.png"></a></div>
+        <div class="vendor_pic_spot"><a href="https://www.landsapothecary.com/home" target="_blank"><img
+                    src="../img/vendor/LeafStoneApothecary.png"></a></div>
+        <div class="vendor_pic_spot"><a href="https://www.facebook.com/Orozcoshotsauce/" target="_blank"><img
+                    src="../img/vendor/orozcos.png"></a></div>
         <div class="vendor_pic_spot"><a href="https://www.serenityfarmcsa.com/" target="_blank"><img
                     src="../img/vendor/serenityfarm.png"></a></div>
         <div class="vendor_pic_spot"><a href="https://signaturesaltsandseasonings.com/" target="_blank"><img
                     src="../img/vendor/signaturesaltsandseasonings.png"></a></div>
-        <div class="vendor_pic_spot"><a href="https://twooliveswichita.com/" target="_blank"><img
-                    src="../img/vendor/twoolives_logo.png"></a></div>
         <div class="vendor_pic_spot"><a href="https://www.facebook.com/TheUncommonTable/" target="_blank"><img
                     src="../img/vendor/uncommontable.png"></a></div>
-        <div class="vendor_pic_spot"><a href="https://www.vorawichita.com/" target="_blank"><img
-                    src="../img/vendor/vora.png"></a></div>
         <!-- <div class="vendor_pic_spot"><img src="../img/vendor/wichitalocaleats.png"></div> -->
     </div>
     <!-- <div class="row2">
@@ -275,7 +328,7 @@
                 <path
                     d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z">
                 </path>
-            </svg></a><a href="https://www.instagram.com/fireflyfarmwichita" target="_blank" rel="noopener noreferrer"
+            </svg></a><a href="https://www.instagram.com/fireflyfoodhub" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
                 class="niftybutton-instagram" style="display:block;fill:currentColor" data-tag="ins"
                 data-name="Instagram" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
